Added home screen

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,70 @@
-<p>footer works!</p>
+<div class="notice-section-grey notice-section-sm border-top">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-sm-8 col-12">
+                <div class="mt-5">
+                    <h6>Looking for Professional Online Accounting Services?</h6>
+
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4 col-12">
+                <div class="mt-10 right-holder-md"><a href="https://www.myaccountsconsultant.com/contact-us/" class="primary-button button-sm mt-15-xs">Contact Now</a></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<footer class="site-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-5">
+                <h6>About Us</h6>
+                <p style="text-align: justify;">..... is a leading provider of Online Accounting Services have an uncanny ability to increase business income, riches, and achievement. We have revealed shrouded resources for the virtual bookkeeping services, accounting
+                    services, payroll services.</p>
+
+            </div>
+
+
+
+            <div class="col-xs-6 col-md-3">
+                <h6>Quick Links</h6>
+                <ul class="footer-links">
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="col-xs-6 col-md-4">
+                <h6>Get in Touch</h6>
+                <p>
+                   D.No:3-456, Plot no:12, Near cyber towers, Hyderabad
+                </p>
+                <ul class="connect-links ">
+                    <li><a href=""><span>Phone:</span>+91 8099029010</a></li>
+                    <li><a href=""><span>Email:</span> sivandu@gmail.com</a></li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+                <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by
+                    <a href="#">...</a>.
+                </p>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <ul class="social-icons">
+                    <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+                    <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
