--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,223 +1,50 @@
-<div class="unit-block ">
-  <div class="wrapper" >
-<div id="header" class="navbar navbar-inverse shadow-fixed " role="navigation">
-							<div class="top-bar hidden-xs hidden-sm">
-					<div class="container">
-						
+<div class="top-bar">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-7">
+				<div class="login"><a href="#" class="login-btn"><i class="fa fa-phone"></i><span class="d-none d-md-inline-block">7207001410</span></a><a href="#" class="signup-btn"><i class="fa fa-envelope"></i><span class="d-none d-md-inline-block">siva@gmail.com</span></a></div>
+			</div>
+			<div class="col-lg-5">
+				<div class="">
+					<!-- <ul class="list-inline contact-info d-block d-md-none">
+			  <li class="list-inline-item"><a href="#"><i class="fa fa-phone"></i></a></li>
+			  <li class="list-inline-item"><a href="#"><i class="fa fa-envelope"></i></a></li>
+			</ul>
+-->
+					<ul class="social-custom list-inline float-right">
+						<li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
+						<li class="list-inline-item"><a href="#"><i class="fa fa-google-plus"></i></a></li>
+						<li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+						<li class="list-inline-item"><a href="#"><i class="fa fa-envelope"></i></a></li>
+					</ul>
 
-						<div class="col-md-4 col-lg-4 col-sm-6 col-xs-6 hidden-xs hidden-sm" style="    padding: 10px;">
-							<a class="hidden-xs hidden-sm" style="color: #00fcee"><i class="fa fa-phone"></i> +91 7845003441</a>&nbsp;&nbsp;
-							<div class="dropdown icon-col visible-xs visible-sm">
-								<a data-toggle="dropdown" href="#" class="">&nbsp;</a>
-								<div class="dropdown-menu" role="menu">
-									 <a class="link"><i class="fa fa-phone"></i> +91 7845003441</a>
-								</div>
-							</div>
-							<a href="https://www.onlinetaxfilings.in/mailto:info@onlinetaxfilings.in" class="hidden-xs hidden-sm" style="color: #00fcee"><i class="fa fa-envelope"></i> info@onlinetaxfilings.in</a><div class="dropdown icon-col visible-xs visible-sm">
-								<a data-toggle="dropdown" href="#" class="">&nbsp;</a>
-								<div class="dropdown-menu" role="menu">
-								 <a class="link" href="https://www.onlinetaxfilings.in/mailto:info@onlinetaxfilings.in"><i class="fa fa-envelope"></i> info@onlinetaxfilings.in</a>
-								</div>
-							</div>	
 
-						</div>
-
-				<div class="col-md-8 col-lg-8 col-sm-6 col-xs-6 hidden-xs hidden-sm" style="    padding: 10px;">
-					
-					<a class="topbar-a" href="https://www.onlinetaxfilings.in/index.php">Home</a>
-
-					<a class="topbar-a" href="https://www.onlinetaxfilings.in/aboutus.php">About Us</a>
-
-					<a class="topbar-a" href="https://www.onlinetaxfilings.in/accounting-services.php">Accounting</a>
-
-					<a class="topbar-a" href="https://www.onlinetaxfilings.in/roc-filing.php">Roc Filing</a>
-
-					<a class="topbar-a" href="https://www.onlinetaxfilings.in/blog/">Blog</a>
-
-					<a class="topbar-a" href="https://www.onlinetaxfilings.in/contactus.php">Contact us</a>
 				</div>
-						<!-- <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6 no-padding">
-							<div class="right-col-bar">
-								<ul>
-									<li class="sing_in"><a href="https://www.onlinetaxfilings.in/wp-login.php">Log in</a></li>								</ul>
-							</div>
-						</div> -->
-					</div>
-				</div>
-						<nav class="navbar navbar-default">
-				<div class="container">
-					<div class="col-md-12 hidden-xs hidden-sm">
-							<div class="col-md-3 col-lg-3 col-sm-3 col-xs-3">
-								<a href="https://www.onlinetaxfilings.in" class="logo no_sticky_logo">
-									<img src="https://www.onlinetaxfilings.in/images/logo.png" alt="" style="max-width: 200px"></a>
-								<a href="https://www.onlinetaxfilings.in" class="logo sticky_logo"><img src="https://www.onlinetaxfilings.in/images/logo.png" alt="" style="max-width: 200px"></a>
-							</div>
-							<div class="col-md-9 col-lg-9 col-sm-9 col-xs-3 navbarmenus">
-<!-- 		<div id="sb-search" class="sb-search">
-              <form role="search" method="get" id="searchform" class="sb-search" action="" >
-              <input type="text" class="sb-search-input" placeholder="enter keywords" value="" name="s" id="s" />
-              <input type="submit" class="sb-search-submit" id="searchsubmit" value="" />
-            </form>
-              <span class="search sb-icon-search">
-                <i class="fa fa-search"></i>
-                <span class="close"></span>
-              </span>
-              
-          </div>	 -->																
-        <div class="menu"><ul id="menu-header-menu" class="nav navbar-nav">
+			</div>
 
-
-
-
-<li id="menu-item-2735" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-2735"><a href="https://www.onlinetaxfilings.in/starting-a-new-business.php">Starting A New Business <i class="fa fa-angle-down"></i></a>
-<ul class="sub-menu">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2751"><a href="https://www.onlinetaxfilings.in/proprietorship-firm-registration.php" class="active">Start Proprietorship</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2749"><a href="https://www.onlinetaxfilings.in/partnership-firm-registration.php">Start Partnership Firm</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2762"><a href="https://www.onlinetaxfilings.in/private-limited-company-registration.php">Start Private Limited Company</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2763"><a href="https://www.onlinetaxfilings.in/limited-liability-partnership-registration.php">Start Limited Liability Partnership</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2747"><a href="https://www.onlinetaxfilings.in/one-person-company-registration.php">Start One Person Company</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2748"><a href="https://www.onlinetaxfilings.in/public-limited-company-registration.php">Start Public Limited Company</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2748"><a href="https://www.onlinetaxfilings.in/section-8-company-registration.php">Start NGO/Section 8 Company</a></li>
-</ul>
-</li>
-
-
-
-<li id="menu-item-2735" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-2735"><a href="#">Registration <i class="fa fa-angle-down"></i></a>
-<ul class="sub-menu">	  
-
-			  <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/gst-registration.php">GST Registration</a></li>
-			  <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/professional-tax-registration.php">Profession Tax Registration</a></li>
-			  <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/epf-registration.php">EPF Registration</a></li>
-			  <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/esi-registration.php">ESI Registration</a></li>
-			  <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/shops-and-establishment-registration.php">Shops and Establishment Registration</a></li>
-			  <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/import-export-code-iec-registration.php">Import and Export Code Registration</a></li>
-			  <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/msme-registration.php">MSME Registration</a></li>
-			  <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/fssai-registration.php">FSSAI Registration</a></li>
-
-
-</ul>
-</li>
-
-<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/amendments-in-registration.php">Amendments in Registration</a></li>
-
-<li id="menu-item-2734" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-2734"><a href="#">Tax filings <i class="fa fa-angle-down"></i></a>
-<ul class="sub-menu">
-<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/gst-return-filing.php">GST Returns Process</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/tds-return-filing.php">TDS Return</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/income-tax-return-filing.php">Income Tax Filings</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/income-tax-notices.php">Income Tax Notices</a></li>
-</ul>
-</li>
-
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children"><a href="#">Intellectual Property <i class="fa fa-angle-down"></i></a>
-<ul class="sub-menu">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page">  <a href="https://www.onlinetaxfilings.in/trademark-registration.php">    Trademark Registration</a>        </li>		
-	<li class="menu-item menu-item-type-post_type menu-item-object-page">  <a href="https://www.onlinetaxfilings.in/trademark-renewal.php">    Trademark Renewal</a>        </li>		
-	<li class="menu-item menu-item-type-post_type menu-item-object-page">  <a href="https://www.onlinetaxfilings.in/copyright-registration.php">    Copyright Registration</a>        </li>		
-	<li class="menu-item menu-item-type-post_type menu-item-object-page">  <a href="https://www.onlinetaxfilings.in/design-registration.php">    Design Registration</a>        </li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page">  <a href="https://www.onlinetaxfilings.in/patent-registration.php">    Patent Registration</a>        </li>
-	
-</ul>
-</li>
-
-</ul></div>						        						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12 col-lg-12 col-sm-12  visible-xs visible-sm">
-								<a href="https://www.onlinetaxfilings.in" class="logo no_sticky_logo">
-                                    <img src="https://www.onlinetaxfilings.in/images/logo.png" style="max-width: 250px;" alt="">
-                                </a>
-							<button data-target="#bs-example-navbar-collapse-12" data-toggle="collapse" class="navbar-toggle" type="button" style="margin-top: 5%;">
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-						</div>
-					</div>
-					<div class="row visible-xs visible-sm">
-						<div class="col-md-12 col-lg-12 col-sm-12 ">
-							<div class="row">
-								<div id="bs-example-navbar-collapse-12" class="collapse navbar-collapse">
-									<!-- <div id="sb-search" class="sb-search">
-              <form role="search" method="get" id="searchform" class="sb-search" action="" >
-              <input type="text" class="sb-search-input" placeholder="enter keywords" value="" name="s" id="s" />
-              <input type="submit" class="sb-search-submit" id="searchsubmit" value="" />
-            </form>
-              <span class="search sb-icon-search">
-                <i class="fa fa-search"></i>
-                <span class="close"></span>
-              </span>
-              
-          </div>						 -->			
-
-          <div class="menu-header-menu-container"><ul id="mb-main-menu" class="nav navbar-nav">
-
-
-
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2731"><a href="https://www.onlinetaxfilings.in/index.php">Home</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2731"><a href="https://www.onlinetaxfilings.in/aboutus.php">About Us</a></li>
-
-<li id="menu-item-2735" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-2735"><a href="#">Starting A New Business </a><a class="submenu-toggler" href="#"><i class="fa fa-angle-down"></i></a>
-<ul class="sub-menu">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2751"><a href="https://www.onlinetaxfilings.in/proprietorship-firm-registration.php" class="active">Start Proprietorship</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2749"><a href="https://www.onlinetaxfilings.in/partnership-firm-registration.php">Start Partnership Firm</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2762"><a href="https://www.onlinetaxfilings.in/private-limited-company-registration.php">Start Private Limited Company</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2763"><a href="https://www.onlinetaxfilings.in/limited-liability-partnership-registration.php">Start Limited Liability Partnership</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2747"><a href="https://www.onlinetaxfilings.in/one-person-company-registration.php">Start One Person Company</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2748"><a href="https://www.onlinetaxfilings.in/public-limited-company-registration.php">Start Public Limited Company</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2748"><a href="https://www.onlinetaxfilings.in/section-8-company-registration.php">Start NGO/Section 8 Company</a></li>
-</ul>
-<span></span></li>
-
-
-
-<li id="menu-item-2735" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-2735"><a href="#">Registration </a><a class="submenu-toggler" href="#"><i class="fa fa-angle-down"></i></a>
-<ul class="sub-menu">	  
-	 <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/gst-registration.php">GST Registration</a></li>
-	 <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/professional-tax-registration.php">Profession Tax Registration</a></li>
-	 <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/epf-registration.php">EPF Registration</a></li>
-	 <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/esi-registration.php">ESI Registration</a></li>
-	 <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/shops-and-establishment-registration.php">Shops and Establishment Registration</a></li>
-	 <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/import-export-code-iec-registration.php">Import and Export Code Registration</a></li>
-	 <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/msme-registration.php">MSME Registration</a></li>
-	 <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/fssai-registration.php">FSSAI Registration</a></li>  
-</ul>
-<span></span></li>
-
-<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/amendments-in-registration.php">Amendments in Registration</a></li>
-
-<li id="menu-item-2734" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-2734"><a href="#">Tax filings</a><a class="submenu-toggler" href="#"><i class="fa fa-angle-down"></i></a>
-<ul class="sub-menu">
-<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/gst-return-filing.php">GST Returns Process</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/tds-return-filing.php">TDS Return</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/income-tax-return-filing.php">Income Tax Filings</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://www.onlinetaxfilings.in/income-tax-notices.php">Income Tax Notices</a></li>
-</ul>
-<span></span></li>
-
-
-
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children"><a href="#">Intellectual Property</a><a class="submenu-toggler" href="#"><i class="fa fa-angle-down"></i></a>
-<ul class="sub-menu">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page">  <a href="https://www.onlinetaxfilings.in/trademark-registration.php">    Trademark Registration</a>        </li>		
-	<li class="menu-item menu-item-type-post_type menu-item-object-page">  <a href="https://www.onlinetaxfilings.in/trademark-renewal.php">    Trademark Renewal</a>        </li>		
-	<li class="menu-item menu-item-type-post_type menu-item-object-page">  <a href="https://www.onlinetaxfilings.in/copyright-registration.php">    Copyright Registration</a>        </li>		
-	<li class="menu-item menu-item-type-post_type menu-item-object-page">  <a href="https://www.onlinetaxfilings.in/design-registration.php">    Design Registration</a>        </li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page">  <a href="https://www.onlinetaxfilings.in/patent-registration.php">    Patent Registration</a>        </li>
-	
-</ul>
-<span></span></li>
-
-</ul></div>								
-
-</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</nav>
 		</div>
-
-  </div>
-  </div>
+	</div>
+</div>
+<nav class="navbar navbar-default">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+		<span class="sr-only">Toggle navigation</span>
+		<span class="icon-bar"></span>
+		<span class="icon-bar"></span>
+		<span class="icon-bar"></span>
+	  </button>
+			<a class="navbar-brand" href=""></a>
+		</div>
+		<div id="navbar" class="collapse navbar-collapse float-right">
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#">Services</a></li>
+				<li><a href="#about">Tools</a></li>
+				<li><a href="#contact">Contact</a></li>
+				<li><a href="#about">Pricing</a></li>
+				<li><a href="#contact">Tax</a></li>
+			</ul>
+		</div>
+	</div>
+</nav>
