--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -44,7 +44,7 @@
                         <h4>{{service.title}}</h4>
                         <p>{{service.description}}
                         </p>
-                        <a href="">{{service.readMore}}</a>
+                        <a href="javascript:void(0)" (click)="readMore(service)">{{service.readMore}}</a>
                     </div>
                 </div>
             </div>
