--- a/src/styles.scss
+++ b/src/styles.scss
@@ -181,7 +181,7 @@ body {
 }
 
 .notice-section-sm {
-    padding: 25px 0;
+    padding: 10px 0;
     background-image: url(https://www.myaccountsconsultant.com/assets/images/bg/acc-lower-image.jpg) !important;
 }
 
@@ -195,6 +195,7 @@ body {
 .mt-10.right-holder-md {
     text-align: left;
     margin-left: 46px;
+    margin-top: 2px;
 }
 
 .mt-10 {
